--- a/src/main/webapp/appjs/home/directives/tpl/footer.html
+++ b/src/main/webapp/appjs/home/directives/tpl/footer.html
@@ -1,3 +1,3 @@
 <div style="position: absolute;bottom: 0;width: 100%;text-align: center;">
-	<p>copy right @wemin</p>
+	<p>copy right @webo</p>
 </div>
