--- a/src/main/webapp/appjs/home/directives/tpl/footer.html
+++ b/src/main/webapp/appjs/home/directives/tpl/footer.html
@@ -1,3 +1,3 @@
-<div style="position: absolute;bottom: 0;width: 100%;text-align: center;">
+<div style="position: absolute;bottom: 0;width: 100%;text-align: center;border-top: 1px solid #d6cdcd;background-color: #f3f2ed;">
 	<p>copy right @webo</p>
 </div>
